# ifj

./: BasicStructures.h  CMakeLists.txt  Debug.c  Debug.h  DoubleLinkedList.c  DoubleLinkedList.h  ExpressionAnalizer.c  ExpressionAnalizer.h  Interpret.c  Interpret.h  LexicalAnalyzer-test.c  LexicalAnalyzer.c  LexicalAnalyzer.h  LexicalAnalyzerStructures.h  Makefile  README.md  SemanticalAnalyzer.c  SemanticalAnalyzer.h  Stack.c  Stack.h  SymbolTable.c  SymbolTable.h  SyntacticalAnalyzer.c  SyntacticalAnalyzer.h  basicstructures.h  debug.c  debug.h  doublelinkedlist.c  doublelinkedlist.h  expressionanalizer.c  expressionanalizer.h  expressionanalyzer.c  expressionanalyzer.h  ial-test.c  ial.c  ial.h  ifj16-test.c  ifj16.c  ifj16.h  instruction.c  (+27 more)
IAL/: Makefile  ial-test  ial-test.c  ial.c  ial.h
IFJ16Lib/: Makefile  ifj16-test.c  ifj16.c  ifj16.h
LexicalAnalyzer/: LexicalAnalyzer-test.c  LexicalAnalyzer.c  LexicalAnalyzer.h  Makefile  test1.txt
SyntacticalAnalyzer/: SyntacticalAnalyzer.c  SyntacticalAnalyzer.h
pythontests/: ifj_test.py  test_list.txt
tests/: test12-0.txt  test16-3.txt  test17-1.txt  test18-2.txt  test19-8.txt  test40-2.txt  test42-0.txt  test44-4.txt  test45-2.txt  test47-0.txt  test927-0.txt  test99-0.txt
tests/tests-0/: test-1.txt  test-10.txt  test-11.txt  test-12.txt  test-14.txt  test-15.txt  test-16.txt  test-17.txt  test-19.txt  test-2.txt  test-20.txt  test-21.txt  test-22.txt  test-23.txt  test-24.txt  test-25.txt  test-26.txt  test-27.txt  test-28.txt  test-29.txt  test-3.txt  test-30.txt  test-32.txt  (+31 more)
tests01/: test_parser.sh
(+442 files in other folders)
